# WarmIt

./: .dockerignore  .env.example  .gitattributes  .gitignore  BUILD_FIX_SUMMARY.md  CHANGELOG.md  CHANGELOG_v0.2.2.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_SPACE.md  FIXES.md  IMPLEMENTATION_NOTES.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  SECURITY.md  UPGRADE_TO_v0.2.2.md  cleanup-docker.sh  pyproject.toml  rebuild-api.sh  requirements.txt  start.sh  warmit.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  lint.yml  test.yml
config/profiles/: large.yaml  (+3 more)
dashboard/: app.py  auth.py  email_providers.py  translations.py
docker/: .env.backup.test  Dockerfile  Dockerfile.dashboard  README.md  docker-compose.dev.yml.backup  docker-compose.prod.yml  nginx.conf
docs/: ARCHITECTURE.md  FAQ.md  FEATURES.md  MULTI_ACCOUNT_SETUP.md  PRODUCTION.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  PROVIDER_SETUP.md  PROVIDER_SETUP_IT.md  QUICKSTART.md  README.md  RESOURCE_ESTIMATION.md  SECURITY_SETUP.md  SYSTEM_REQUIREMENTS.md  TODO.md  UBUNTU_QUICKSTART.md  USAGE.md
examples/: api_examples.sh  setup_multi_accounts.sh
scripts/: README.md  check-docker-space.sh  check_requirements.sh  cleanup-docker.sh  cli.py  debug-container.sh  estimate_resources.py  fix-redis-warning.sh  force-rebuild.sh  migrate_add_names.py  migrate_encrypt_passwords.py  run_dev.sh  setup.sh  watchdog.py
tests/: __init__.py  conftest.py  test_domain_checker.py
(+46 files in other folders)
